For 1.20.4
	- problem parsing floats/doubles with a positive sign starting(or part of exponent),
	  eg, "123e+10" now parses - before expected "123e10".

	- start on Geospatial nodes. GeoLocation, GeoViewpoint and GeoOrigin coded. Note -
	  eventOuts not in code yet, until there are more Geo nodes to test routing with.

	- SFVec3d and MFVec3d code handling added to classic and xml parser.

	- Sensitive nodes can now be partially occluded by other (non-sensitive) geometry.

	- Linux: if iconified, skip all OpenGL rendering calls.

	- modified file-read function to handle files without an end of line character on last 
	  line - some older Microsoft-generated files would cause last line to be lost. 

	- change order of actual DEF node pointer saving so that, within a DEFine, the name can
	  be used. (eg, DEF xx Transform{children Script{field yy USE xx}}

	- Javascript - accessing an MFRotation from a specified SFNode gave an error - now fixed.

	- LOD changed to accept either VRML "level" or X3D "children" fields.

	- Texture files that are located, but are invalid textures, are now reported in a more user-friendly
	  way.

For 1.20.3
	- VisibilitySensors were not properly added to new internal scenegraph code, so were not working
	  reliably.

	- Routing table additions now buffered, and performed at a specific place in event loop; helped
	  a bug where an event generated routing table entries.

	- Javascript createVrmlFromString and createVrmlFromURL had problems with name-cross contamination
	  between caller and created VRML/X3D code.

	- Linux/Motif - ConsoleMessages were not printing properly when running standalone. Had extra copies
	  of data, causing increasing delays when printing lots of information. When running in HTML browser,
	  line breaks were not correct. 

	- use system fonts, if they are installed. (Linux). Check is done at build time and at run time. Look
	  for "FONTSDIR" in the code. If not found, will try the INSTALLDIR, then BUILDDIR.
