@@ -616,8 +616,6 @@ handle_tick_fly()
 		}
 	}
 
-	printf ("speed %f timedif %lf\n",Viewer.speed,time_diff); 
-
 	/* first, get all the keypresses since the last time */
 	for (i = 0; i < KEYS_HANDLED; i++) {
 		(ps[i]).hit += (fly->Down[i]).hit;
@@ -803,23 +801,6 @@ void increment_pos(struct point_XYZ *vec) {
 	(Viewer.Pos).x += nv.x;
 	(Viewer.Pos).y += nv.y;
 	(Viewer.Pos).z += nv.z;
-
-#ifdef HANDLE_NEARPLANE_HERE
-	/* handle the farPlane and nearPlane... Geospatial nodes without a GeoOrigin can put us
-	   out in outer space... */
-	cp = (double)21000.0;	/* good starting value */ 
-	cp = (double)41000.0;	/* good starting value */ 
-	np = 0.100;		/* good starting value */
-
-	/* 2.0 is a bit of overkill, but not too much of an overkill... */
-	tmp=fabs(Viewer.Pos.x*((double)2.0)); if (tmp > cp) {cp = tmp; np = fabs(Viewer.Pos.x/((double)2.0)); forceBackgroundRecompile=TRUE;}
-	tmp=fabs(Viewer.Pos.y*((double)2.0)); if (tmp > cp) {cp = tmp; np = fabs(Viewer.Pos.y/((double)2.0)); forceBackgroundRecompile=TRUE;}
-	tmp=fabs(Viewer.Pos.z*((double)2.0)); if (tmp > cp) {cp = tmp; np = fabs(Viewer.Pos.z/((double)2.0)); forceBackgroundRecompile=TRUE;}
-	farPlane = cp;
-	nearPlane = np;
-	printf ("farPlane now %lf, nearPlane %lf\n",farPlane,nearPlane); 
-#endif
-
 }
 
 
